--- a/win32/Kbuild
+++ b/win32/Kbuild
@@ -6,6 +6,7 @@ lib-y:=
 
 lib-$(CONFIG_PLATFORM_MINGW32) += env.o
 lib-$(CONFIG_PLATFORM_MINGW32) += fnmatch.o
+lib-$(CONFIG_PLATFORM_MINGW32) += ioctl.o
 lib-$(CONFIG_PLATFORM_MINGW32) += mingw.o
 lib-$(CONFIG_PLATFORM_MINGW32) += process.o
 lib-$(CONFIG_PLATFORM_MINGW32) += regex.o
