--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.21.0.git
-# Thu Nov 29 10:22:19 2012
+# Mon Dec 10 13:44:07 2012
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -64,6 +64,7 @@ CONFIG_BUSYBOX_EXEC_PATH=""
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 # CONFIG_LFS is not set
+CONFIG_NOGLOB=y
 CONFIG_CROSS_COMPILER_PREFIX="i686-pc-mingw32-"
 CONFIG_SYSROOT=""
 CONFIG_EXTRA_CFLAGS="-g -O0"
