--- a/win32/Kbuild
+++ b/win32/Kbuild
@@ -13,6 +13,8 @@ lib-$(CONFIG_PLATFORM_MINGW32) += regex.o
 lib-$(CONFIG_WIN32_NET) += net.o
 lib-$(CONFIG_PLATFORM_MINGW32) += poll.o
 lib-$(CONFIG_PLATFORM_MINGW32) += popen.o
+lib-$(CONFIG_PLATFORM_MINGW32) += statfs.o
+lib-$(CONFIG_PLATFORM_MINGW32) += mntent.o
 lib-$(CONFIG_PLATFORM_MINGW32) += system.o
 lib-$(CONFIG_PLATFORM_MINGW32) += termios.o
 lib-$(CONFIG_PLATFORM_MINGW32) += uname.o
