Drop CONFIG_WIN32_NET setting

--- a/win32/Kbuild
+++ b/win32/Kbuild
@@ -10,7 +10,7 @@ lib-$(CONFIG_PLATFORM_MINGW32) += ioctl.o
 lib-$(CONFIG_PLATFORM_MINGW32) += mingw.o
 lib-$(CONFIG_PLATFORM_MINGW32) += process.o
 lib-$(CONFIG_PLATFORM_MINGW32) += regex.o
-lib-$(CONFIG_WIN32_NET) += net.o
+lib-$(CONFIG_PLATFORM_MINGW32) += net.o
 lib-$(CONFIG_PLATFORM_MINGW32) += poll.o
 lib-$(CONFIG_PLATFORM_MINGW32) += popen.o
 lib-$(CONFIG_PLATFORM_MINGW32) += statfs.o
