--- a/Makefile.flags
+++ b/Makefile.flags
@@ -119,10 +119,7 @@ ifeq ($(CONFIG_PLATFORM_MINGW32),y)
 # These defintions are not strictly needed, but they help shut up fnmatch.c warnings
 CFLAGS += -Iwin32 -DHAVE_STRING_H=1 -DHAVE_CONFIG_H=0 -fno-builtin-stpcpy
 EXEEXT = .exe
-LDLIBS += userenv
-ifeq ($(CONFIG_WIN32_NET),y)
-LDLIBS += ws2_32
-endif
+LDLIBS += userenv ws2_32
 endif
 
 # Android has no separate crypt library
