--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -269,7 +269,7 @@ quiet_cmd_link_o_target = LD      $@
 ifeq ($(CONFIG_PLATFORM_WATCOM386),y)
 cmd_link_o_target = $(if $(strip $(obj-y)),\
 		$(LD) $(ld_flags) -o $@ $(filter $(obj-y), $^),\
-		rm -f $@; $(AR) rcs $@)
+		rm -f $@; $(AR) $@)
 else
 cmd_link_o_target = $(if $(strip $(obj-y)),\
 		$(LD) -nostdlib $(ld_flags) -r -o $@ $(filter $(obj-y), $^),\
@@ -286,8 +286,13 @@ endif # builtin-target
 # Rule to compile a set of .o files into one .a file
 #
 ifdef lib-target
+ifeq ($(CONFIG_PLATFORM_WATCOM386),y)
+quiet_cmd_link_l_target = AR      $@
+cmd_link_l_target = rm -f $@; $(AR) $(EXTRA_ARFLAGS) $@ $(lib-y)
+else
 quiet_cmd_link_l_target = AR      $@
 cmd_link_l_target = rm -f $@; $(AR) $(EXTRA_ARFLAGS) rcs $@ $(lib-y)
+endif
 
 $(lib-target): $(lib-y) FORCE
 	$(call if_changed,link_l_target)
