--- a/configs/watcom386_defconfig
+++ b/configs/watcom386_defconfig
@@ -58,7 +58,7 @@ CONFIG_BUSYBOX_EXEC_PATH=""
 #
 # Build Options
 #
-# CONFIG_STATIC is not set
+CONFIG_STATIC=y
 # CONFIG_PIE is not set
 # CONFIG_NOMMU is not set
 # CONFIG_BUILD_LIBBUSYBOX is not set
