--- a/configs/watcom386_defconfig
+++ b/configs/watcom386_defconfig
@@ -28,18 +28,18 @@ CONFIG_FEATURE_COMPRESS_USAGE=y
 # CONFIG_FEATURE_INSTALLER is not set
 # CONFIG_INSTALL_NO_USR is not set
 # CONFIG_LOCALE_SUPPORT is not set
-# CONFIG_UNICODE_SUPPORT is not set
+CONFIG_UNICODE_SUPPORT=y
 # CONFIG_UNICODE_USING_LOCALE is not set
 # CONFIG_FEATURE_CHECK_UNICODE_IN_ENV is not set
-CONFIG_SUBST_WCHAR=0
-CONFIG_LAST_SUPPORTED_WCHAR=0
+CONFIG_SUBST_WCHAR=63
+CONFIG_LAST_SUPPORTED_WCHAR=767
 # CONFIG_UNICODE_COMBINING_WCHARS is not set
-# CONFIG_UNICODE_WIDE_WCHARS is not set
+CONFIG_UNICODE_WIDE_WCHARS=y
 # CONFIG_UNICODE_BIDI_SUPPORT is not set
 # CONFIG_UNICODE_NEUTRAL_TABLE is not set
 # CONFIG_UNICODE_PRESERVE_BROKEN is not set
 # CONFIG_PAM is not set
-CONFIG_LONG_OPTS=y
+# CONFIG_LONG_OPTS is not set
 # CONFIG_FEATURE_DEVPTS is not set
 # CONFIG_FEATURE_CLEAN_UP is not set
 # CONFIG_FEATURE_UTMP is not set
@@ -582,7 +582,7 @@ CONFIG_REV=y
 # CONFIG_MKFS_REISER is not set
 # CONFIG_MKFS_VFAT is not set
 CONFIG_GETOPT=y
-CONFIG_FEATURE_GETOPT_LONG=y
+#CONFIG_FEATURE_GETOPT_LONG is not set
 CONFIG_HEXDUMP=y
 CONFIG_FEATURE_HEXDUMP_REVERSE=y
 CONFIG_HD=y
