less hacks, move to win32/, import gnulib, enable getopt_long

--- a/configs/watcom386_defconfig
+++ b/configs/watcom386_defconfig
@@ -582,7 +582,7 @@ CONFIG_REV=y
 # CONFIG_MKFS_REISER is not set
 # CONFIG_MKFS_VFAT is not set
 CONFIG_GETOPT=y
-#CONFIG_FEATURE_GETOPT_LONG is not set
+CONFIG_FEATURE_GETOPT_LONG=y
 CONFIG_HEXDUMP=y
 CONFIG_FEATURE_HEXDUMP_REVERSE=y
 CONFIG_HD=y
