--- a/Makefile.flags
+++ b/Makefile.flags
@@ -168,7 +168,7 @@ CFLAGS 		= -bnt -mthreads -O3 -DUNICODE
 CXXFLAGS 	= -bnt -mthreads -O3 -DUNICODE
 AFLAGS 		= " "
 LDFLAGS 	= -mthreads
-CFLAGS += -Iwin32 -Iinclude -DHAVE_STRING_H=1 -DHAVE_CONFIG_H=0 -D_ENABLE_AUTODEPEND
+CFLAGS += -Iwin32 -Iwin32/watcom -Iinclude -DHAVE_STRING_H=1 -DHAVE_CONFIG_H=0 -D_ENABLE_AUTODEPEND
 EXEEXT = .exe
 LDLIBS += userenv ws2_32
 
