--- a/win32/Kbuild
+++ b/win32/Kbuild
@@ -4,6 +4,17 @@
 
 lib-y:=
 
+ifeq ($(CONFIG_PLATFORM_WATCOM386),y)
+lib-y += watcom_stubs.o
+lib-y += getopt.o
+lib-y += getopt1.o
+lib-y += getpagesize.o
+lib-y += ftruncate.o
+lib-y += msvc-nothrow.o
+lib-y += msvc-inval.o
+CONFIG_PLATFORM_MINGW32 = y
+endif
+
 lib-$(CONFIG_PLATFORM_MINGW32) += env.o
 lib-$(CONFIG_PLATFORM_MINGW32) += fnmatch.o
 lib-$(CONFIG_PLATFORM_MINGW32) += ioctl.o
