strip after linking

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -159,6 +159,7 @@ LD 		= owcc
 # could not find something like nm, use host binutils
 NM 		= nm
 STRIP 		= wstrip
+SKIP_STRIP	= y
 #we do not want binutils to mess with object
 #format, let script believe it succeeded
 OBJCOPY 	= true
@@ -167,8 +168,8 @@ OBJDUMP 	= dmpobj
 # -s strips debug flags, for debug build
 # remove this
 ARFLAGS		= -q
-CFLAGS 		= -bnt -mabi=w -mtune=686 -msoft-float -mthreads -O3 -DWIN32 -s
-CXXFLAGS 	= -bnt -mabi=w -mtune=686 -msoft-float -mthreads -O3 -DWIN32 -s
+CFLAGS 		= -bnt -mabi=w -mtune=686 -msoft-float -mthreads -O3 -DWIN32
+CXXFLAGS 	= -bnt -mabi=w -mtune=686 -msoft-float -mthreads -O3 -DWIN32
 AFLAGS 		= 
 LIBPATH		= $(WATCOM)/lib386:$(WATCOM)/lib386/nt:$(WATCOM)/binnt
 LIBRARY		= clib3r math387r ncrypt crypt32 userenv ws2_32
