--- a/Makefile.flags
+++ b/Makefile.flags
@@ -168,8 +168,8 @@ OBJDUMP 	= dmpobj
 # -s strips debug flags, for debug build
 # remove this
 ARFLAGS		= -q
-CFLAGS 		= -bnt -mabi=w -mtune=686 -msoft-float -mthreads -O3 -DWIN32
-CXXFLAGS 	= -bnt -mabi=w -mtune=686 -msoft-float -mthreads -O3 -DWIN32
+CFLAGS 		= -bnt -s -mabi=w -mtune=686 -msoft-float -mthreads -O3 -D_UNICODE
+CXXFLAGS 	= -bnt -s -mabi=w -mtune=686 -msoft-float -mthreads -O3 -D_UNICODE
 AFLAGS 		= 
 LIBPATH		= $(WATCOM)/lib386:$(WATCOM)/lib386/nt:$(WATCOM)/binnt
 LIBRARY		= clib3r math387r ncrypt crypt32 userenv ws2_32
