eliminated the stack dump after applet execution

--- a/configs/watcom386_defconfig
+++ b/configs/watcom386_defconfig
@@ -65,7 +65,7 @@ CONFIG_STATIC=y
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
-CONFIG_NOGLOB=N
+CONFIG_NOGLOB=y
 CONFIG_CROSS_COMPILER_PREFIX=""
 CONFIG_SYSROOT=""
 CONFIG_EXTRA_CFLAGS=""
@@ -75,7 +75,7 @@ CONFIG_EXTRA_LDLIBS=""
 #
 # Debugging Options
 #
-CONFIG_DEBUG=y
+# CONFIG_DEBUG is not set
 # CONFIG_DEBUG_PESSIMIZE is not set
 # CONFIG_UNIT_TEST is not set
 # CONFIG_WERROR is not set
