ash: enable saving history to file in default config

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.23.0.git
-# Mon Oct  6 12:51:34 2014
+# Sat Dec  6 16:49:38 2014
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -110,9 +110,9 @@ CONFIG_FEATURE_EDITING=y
 CONFIG_FEATURE_EDITING_MAX_LEN=1024
 # CONFIG_FEATURE_EDITING_VI is not set
 CONFIG_FEATURE_EDITING_HISTORY=255
-# CONFIG_FEATURE_EDITING_SAVEHISTORY is not set
+CONFIG_FEATURE_EDITING_SAVEHISTORY=y
 # CONFIG_FEATURE_EDITING_SAVE_ON_EXIT is not set
-# CONFIG_FEATURE_REVERSE_SEARCH is not set
+CONFIG_FEATURE_REVERSE_SEARCH=y
 CONFIG_FEATURE_TAB_COMPLETION=y
 CONFIG_FEATURE_USERNAME_COMPLETION=y
 CONFIG_FEATURE_EDITING_FANCY_PROMPT=y
@@ -1020,7 +1020,7 @@ CONFIG_SH_MATH_SUPPORT_64=y
 CONFIG_FEATURE_SH_EXTRA_QUIET=y
 CONFIG_FEATURE_SH_STANDALONE=y
 CONFIG_FEATURE_SH_NOFORK=y
-# CONFIG_FEATURE_SH_HISTFILESIZE is not set
+CONFIG_FEATURE_SH_HISTFILESIZE=y
 
 #
 # System Logging Utilities
