--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.23.0.git
-# Sat Dec 13 15:53:04 2014
+# Busybox version: 1.23.0-TIG-1656-g6d6d18d
+# Sun Dec 14 14:24:44 2014
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -39,6 +39,7 @@ CONFIG_LAST_SUPPORTED_WCHAR=0
 # CONFIG_UNICODE_NEUTRAL_TABLE is not set
 # CONFIG_UNICODE_PRESERVE_BROKEN is not set
 # CONFIG_PAM is not set
+# CONFIG_FEATURE_USE_SENDFILE is not set
 CONFIG_LONG_OPTS=y
 # CONFIG_FEATURE_DEVPTS is not set
 # CONFIG_FEATURE_CLEAN_UP is not set
@@ -775,7 +776,6 @@ CONFIG_FEATURE_FTPGETPUT_LONG_OPTIONS=y
 # CONFIG_HOSTNAME is not set
 # CONFIG_HTTPD is not set
 # CONFIG_FEATURE_HTTPD_RANGES is not set
-# CONFIG_FEATURE_HTTPD_USE_SENDFILE is not set
 # CONFIG_FEATURE_HTTPD_SETUID is not set
 # CONFIG_FEATURE_HTTPD_BASIC_AUTH is not set
 # CONFIG_FEATURE_HTTPD_AUTH_MD5 is not set
