--- a/Makefile.flags
+++ b/Makefile.flags
@@ -14,7 +14,11 @@ endif
 endif
 
 ifeq ($(CONFIG_PLATFORM_WATCOM386),y)
-CPPFLAGS = -std=c99 -Wc,-aa -D+
+# -Wc,-ez gives phar lap object format... 
+# -Wc,-zu does not assume stack in data segment, injects __far
+# -Wc,-s do not do stack checks
+# -Wc,-sg grow stack
+CPPFLAGS = -std=c99 -Wc,-aa -Wc,-ai -Wc,-aq -Wc,-zev -D+
 else
 # -std=gnu99 needed for [U]LLONG_MAX on some systems
 CPPFLAGS += $(call cc-option,-std=gnu99,)
@@ -165,14 +169,14 @@ SKIP_STRIP	= y
 OBJCOPY 	= true
 OBJDUMP 	= dmpobj
 #some recommended flags for optimized 32-bit
-# -s strips debug flags, for debug build
-# remove this
+# -s strips debug flags, for debug build add -g2
+# 
 ARFLAGS		= -q
-CFLAGS 		= -bnt -mthreads -mtune=i686 -D_UNICODE
-CXXFLAGS 	= -bnt -mthreads -mtune=i686 -D_UNICODE
+CFLAGS 		= -bnt -mtune=i686 -fptune=i686 -mthreads -D_UNICODE
+CXXFLAGS 	= -bnt -mtune=i686 -fptune=i686 -mthreads -D_UNICODE
 AFLAGS 		= 
 LIBPATH		= $(WATCOM)/lib386:$(WATCOM)/lib386/nt:$(WATCOM)/binnt
-LIBRARY		= clib3r math387r ncrypt crypt32 userenv ws2_32
+LIBRARY		= ncrypt crypt32 userenv ws2_32
 CFLAGS += -Iwin32 -Iwin32/watcom -Iinclude -DHAVE_STRING_H=1 -DHAVE_CONFIG_H=0 -D_ENABLE_AUTODEPEND
 EXEEXT = .exe
 
