--- a/Makefile.flags
+++ b/Makefile.flags
@@ -18,7 +18,7 @@ ifeq ($(CONFIG_COMPILER_WATCOM),y)
 # -Wc,-zu does not assume stack in data segment, injects __far
 # -Wc,-s do not do stack checks
 # -Wc,-sg grow stack
-CPPFLAGS = -std=c99 -Wc,-aa -Wc,-ai -Wc,-aq -Wc,-sg -Wc,-zev -D+
+CPPFLAGS = -std=c99 -Wc,-aa -Wc,-ai -Wc,-aq -Wc,-zev -D+
 else
 # -std=gnu99 needed for [U]LLONG_MAX on some systems
 CPPFLAGS += $(call cc-option,-std=gnu99,)
@@ -165,16 +165,11 @@ OBJDUMP 	= dmpobj
 # character encoding: use tchar.h wherever possible
 # several options: none, -D_UNICODE, -D_MBCS
 ARFLAGS		= -q
-<<<<<<< HEAD
 endif
 
 ifeq ($(CONFIG_PLATFORM_WATCOM386_WIN32),y)
 CFLAGS 		= -bnt -mthreads -mtune=i686 -fptune=i686 -D_UNICODE
 CXXFLAGS 	= -bnt -mthreads -mtune=i686 -fptune=i686 -D_UNICODE
-=======
-CFLAGS 		= -bnt -mthreads -mtune=i686 -D_UNICODE
-CXXFLAGS 	= -bnt -mthreads -mtune=i686 -D_UNICODE
->>>>>>> change barriers to mfence
 AFLAGS 		= 
 LIBPATH		= $(WATCOM)/lib386:$(WATCOM)/lib386/nt:$(WATCOM)/binnt
 LIBRARY		= ncrypt crypt32 userenv ws2_32
